# Copyright (c) 2022 PHPER Framework Team
# PHPER is licensed under Mulan PSL v2.
# You can use this software according to the terms and conditions of the Mulan
# PSL v2. You may obtain a copy of Mulan PSL v2 at:
#          http://license.coscl.org.cn/MulanPSL2
# THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY
# KIND, EITHER EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO
# NON-INFRINGEMENT, MERCHANTABILITY OR FIT FOR A PARTICULAR PURPOSE.
# See the Mulan PSL v2 for more details.

[package]
name = "phper"
description = "The framework that allows us to write PHP extensions using pure and safe Rust whenever possible."
documentation = "https://docs.rs/phper"
readme = "README.md"
keywords = ["php", "binding", "extension", "module"]
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
derive_more = { version = "1.0.0-beta.6", features = ["from", "constructor"] }
once_cell = "1.19.0"
thiserror = "1.0.61"
bitflags = "2.5.0"
memoffset = "0.9.1"
smallvec = { version = "1.13.2", features = ["const_generics", "const_new", "union"] }
paste = "^1.0.15"

phper-alloc = { workspace = true }
phper-macros = { workspace = true }
phper-sys = { workspace = true }

[build-dependencies]
phper-build = { workspace = true }
phper-sys = { workspace = true }
